--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./scss/index.scss";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: $font-grey;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.Toastify {
+    .Toastify__toast-container--top-center {
+      width: 100%;
+
+      .Toastify__toast--success {
+      
+        .Toastify__close--button {
+          align-self: center;
+        }
+      }
+    }
 }
